Fixed submit button blocking content on mobile in landscape mode

--- a/static/card.css
+++ b/static/card.css
@@ -32,6 +32,7 @@ body {
     place-items: center;
     background-color: var(--backgroundcolour);
     font-family: 'Roboto', sans-serif;
+    /* min-height: var(--app-height); */
 }
 .lesson-content {
     text-align: center;
@@ -39,7 +40,8 @@ body {
     font-size: 16px;
     width: 100%;
     padding: 10px 12px 45px 12px;
-    height: var(--app-height);
+    min-height: var(--app-height);
+
 }
 
 .lesson-instructions {
@@ -53,13 +55,7 @@ body {
 
 
 h3 {
-    /* color: var(--text100);
-    font-size: 21px;
-    font-weight: 500; */
-
-    /* font-weight: normal; */
     font-size: 1.2rem;
-    /* text-align: left; */
     margin-bottom: 20px;
     color: var(--text100);
     letter-spacing: 0.04rem;
@@ -106,7 +102,6 @@ h3 {
     border-radius: 16px;
 }
 .points, .health {
-    /* margin: 15px 0 0 0; */
     padding: 15px 20px;
     display: inline-block;
 }
@@ -121,6 +116,7 @@ h3 {
     width: 35%;
 }
 .card {
+    overflow: scroll;
     background-color: var(--lessonbackground);
     border: 3px solid;
     border-color: var(--secondarycolour);
@@ -175,6 +171,9 @@ h3 {
 
 .user-submit {
     /* height: 40px; */
+    position: sticky;
+    bottom: 0px;
+    align-self: end;
     width: 100%;
     margin-top: auto;
     padding-bottom: 16px;
@@ -257,7 +256,7 @@ h3 {
         border-radius: 20px;
     }
 
-    .lesson-content, .lesson-instructions {
+    .lesson-content {
         max-width: 750px;
     }
 
